--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,6 @@
 :root {
     --pink: #ffc1cc;
+    --white: #ffffff;
 }
 
 * {
@@ -20,6 +21,7 @@ header {
     position: sticky;
     top: 0;
     background-color: var(--pink);
+    color: var(--white);
 }
 
 header h1 {
@@ -36,6 +38,11 @@ header a {
     text-decoration: none;
 }
 
+header a:hover {
+    color: #40e0d0;
+    font-weight: bold;
+}
+
 header nav ul {
     display: flex;
     flex-wrap: wrap;
@@ -49,25 +56,64 @@ header nav ul li a {
 }
 
 /* Content */
-.content {
-    text-align: center;
-}
 
 .content h2 {
     border-bottom: 3px solid var(--pink);
 }
 
-#about img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
+#about {
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+#about {
+    width: 100%;
+    height: 21vw;
+    margin-top: 20px;
+    margin-bottom: 30px; 
+}
+  
+.left-container {
+    float: left;
+    height: 21vw;
+    width: 50%;
+}
+ 
+.left-content {
+    width: 100%;
+    height: 21vw;
+}
+
+.left-content img {
+    width: 50%;
+    height: 21vw;
+}
+
+.right-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 21vw;
+    background: #fff;
+    width: 50%;
+    float: left;
+}
+  
+
+.right-content {
+    max-width: 70%;
+}
+  
+.text {
+    padding-left: 20px;
 }
 
 #projects img {
-    width: 100px;
+    width: 300px;
 }
 
 p {
     font-family: 'Comfortaa', cursive;
+    line-height: 1.6;
 }
 
