--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,7 @@
 :root {
     --pink: #ffc1cc;
     --white: #ffffff;
+    --teal: #367588;
 }
 
 * {
@@ -20,7 +21,7 @@ header {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    background-color: var(--pink);
+    background-color: var(--teal);
     color: var(--white);
 }
 
@@ -36,10 +37,11 @@ header h1 {
 
 header a {
     text-decoration: none;
+    color: var(--white);
 }
 
 header a:hover {
-    color: #40e0d0;
+    color: var(--pink);
     font-weight: bold;
 }
 
@@ -63,20 +65,14 @@ header nav ul li a {
 
 #about {
     width: 100%;
-    margin-bottom: 30px;
-}
-
-#about {
-    width: 100%;
     height: 21vw;
-    margin-top: 20px;
-    margin-bottom: 30px; 
+    margin: 30px 35px;
 }
   
 .left-container {
     float: left;
     height: 21vw;
-    width: 50%;
+    width: 30%;
 }
  
 .left-content {
@@ -87,6 +83,7 @@ header nav ul li a {
 .left-content img {
     width: 50%;
     height: 21vw;
+    border-radius: 50%;
 }
 
 .right-container {
@@ -95,7 +92,7 @@ header nav ul li a {
     justify-content: space-around;
     height: 21vw;
     background: #fff;
-    width: 50%;
+    width: 70%;
     float: left;
 }
   
@@ -108,12 +105,37 @@ header nav ul li a {
     padding-left: 20px;
 }
 
-#projects img {
-    width: 300px;
-}
-
 p {
     font-family: 'Comfortaa', cursive;
     line-height: 1.6;
 }
 
+/* Projects Section */
+.project-cards {
+    flex: 4;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    flex: 0 0 400px;
+    text-align: center;
+}
+
+.card h3 {
+    background-color: var(--teal);
+    color: var(--white);
+    padding: 15px;
+}
+
+.card img {
+    width: 100%;
+    height: 70%;
+}
