--- a/assets/styles.css
+++ b/assets/styles.css
@@ -58,42 +58,29 @@ header nav ul li a {
 }
 
 /* Content */
-
 .content h2 {
     border-bottom: 3px solid var(--pink);
 }
 
 #about {
-    width: 100%;
-    height: 21vw;
-    margin: 30px 35px;
+    display: flex;
+    box-sizing: border-box;
+    padding: 25px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
   
-.left-container {
-    float: left;
-    height: 21vw;
-    width: 30%;
-}
- 
-.left-content {
-    width: 100%;
-    height: 21vw;
-}
-
-.left-content img {
-    width: 50%;
-    height: 21vw;
+#profile-pic {
+    height: 250px;
     border-radius: 50%;
 }
 
 .right-container {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 21vw;
     background: #fff;
     width: 70%;
-    float: left;
+    flex-direction: column;
+    justify-content: center;
 }
   
 
@@ -111,9 +98,12 @@ p {
 }
 
 /* Projects Section */
+#projects h2 {
+    text-align: center;
+}
+
 .project-cards {
     flex: 4;
-    padding: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -125,8 +115,6 @@ p {
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
-    flex: 0 0 400px;
-    text-align: center;
 }
 
 .card h3 {
@@ -138,4 +126,55 @@ p {
 .card img {
     width: 100%;
     height: 70%;
+}
+
+/* Contact section */
+#contact {
+    text-align: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+
+#contact a {
+    text-decoration: none;
+}
+
+#contact img {
+    background-color: var(--white);
+    height: 60px;
+    margin-top: 20px;
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 992px){
+    #profile-pic {
+        margin-bottom: 25px;
+    }
+
+    .right-container {
+        flex: 0 100%;
+    }
+}
+
+@media screen and (max-width: 768px){
+    #profile-pic {
+        margin-bottom: 25px;
+
+    }
+
+    .right-container {
+        flex: 0 100%;
+    }
+
+}
+
+@media screen and (max-width: 576px){
+    #profile-pic {
+        margin-bottom: 25px;
+        height: 200px;
+    }
+
+    .right-container {
+        flex: 0 100%;
+    }
 }
