--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,50 +11,8 @@
     font-family: 'Playfair Display', serif;
 }
 
-/* Navigation */
-header {
-    font-family: 'Playfair Display', serif;
-    padding: 20px 35px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    background-color: var(--teal);
-    color: var(--white);
-}
-
-header h1 {
-    font-weight: bold;
-    font-size: 30px;
-    margin: 0;
-}
-
 #portfolio {
     font-size: 24px;
-}
-
-header a {
-    text-decoration: none;
-    color: var(--white);
-}
-
-header a:hover {
-    color: var(--pink);
-    font-weight: bold;
-}
-
-header nav ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-}
-
-header nav ul li a {
-    padding: 10px 15px;
 }
 
 /* Content */
@@ -102,7 +60,7 @@ p {
     text-align: center;
 }
 
-.project-cards {
+/* .project-cards {
     flex: 4;
     display: flex;
     flex-wrap: wrap;
@@ -126,7 +84,7 @@ p {
 .card img {
     width: 100%;
     height: 70%;
-}
+} */
 
 /* Contact section */
 #contact {
