--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,98 +1,124 @@
 :root {
-    --pink: #ffc1cc;
-    --white: #ffffff;
-    --teal: #5BDCCF;
+  --gray: #454742;
+  --white: #ffffff;
+  --teal: #5bdccf;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Playfair Display', serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.navbar {
+  background-color: var(--gray);
 }
 
 .navbar-item {
-    color: var(--teal);
+  color: var(--teal);
+  font-family: "Rye", cursive;
 }
 
 #portfolio {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 /* Content */
-.content h2 {
-    border-bottom: 3px solid var(--pink);
+
+.hero-text h1 {
+  font-family: "Ewert", cursive;
+  color: var(--white);
+}
+
+.hero-text h2,
+.hero-text p {
+  font-family: "Maiden Orange", cursive;
+  color: var(--white);
+}
+
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("images/hero-image.JPG");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 600px;
+  position: relative;
 }
 
 #about {
-    display: flex;
-    box-sizing: border-box;
-    padding: 25px;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+  display: flex;
+  box-sizing: border-box;
+  padding: 25px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
-  
+
 #profile-pic {
-    height: 250px;
-    border-radius: 50%;
+  height: 250px;
+  border-radius: 50%;
 }
 
 .right-container {
-    display: flex;
-    background: #fff;
-    width: 70%;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  background: #fff;
+  width: 70%;
+  flex-direction: column;
+  justify-content: center;
 }
-  
 
 .right-content {
-    max-width: 70%;
+  max-width: 70%;
 }
-  
+
 .text {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 p {
-    font-family: 'Comfortaa', cursive;
-    line-height: 1.6;
+  line-height: 1.6;
 }
 
 .img {
-    height: 200px;
+  height: 200px;
 }
 
 /* Projects Section */
 #projects h2 {
-    text-align: center;
+  text-align: center;
+  font-family: "Rye", cursive;
 }
 
-.card-equal-height, .card-content {
-    flex-grow: 1;
+.project-container {
+  font-family: "Maiden Orange", cursive;
+}
+
+.card-equal-height,
+.card-content {
+  flex-grow: 1;
 }
 
 .card-footer-item {
-    background-color: var(--teal);
-    color: var(--white)
+  background-color: var(--teal);
+  color: var(--white);
 }
 
 /* Contact section */
 #contact {
-    text-align: center;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    padding-top: 40px;
-    margin-top: 40px;
+  text-align: center;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  padding-top: 40px;
+  margin-top: 40px;
+  font-family: "Rye", cursive;
 }
 
 #contact a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #contact img {
-    background-color: var(--white);
-    height: 60px;
-    margin-top: 20px;
+  background-color: var(--white);
+  height: 60px;
+  margin-top: 20px;
 }
-
